output/facebook/rocksdb/180.txt
when i run "make shared_lib" ,i got some errors like these:

In file included from table/plain_table_builder.cc:7:
In file included from ./table/plain_table_builder.h:13:
./table/plain_table_key_coding.h:15:1: error: class 'ParsedInternalKey' was previously declared as a struct [-Werror,-Wmismatched-tags]
class ParsedInternalKey;
^
./db/dbformat.h:57:8: note: previous use is here
struct ParsedInternalKey {
       ^
./table/plain_table_key_coding.h:15:1: note: did you mean struct here?
class ParsedInternalKey;
^~~~~
struct
1 error generated.

